--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-PySide6
-nltk
-pyspellchecker
+pip install nltk spacy pyspellchecker
+python -m nltk.downloader punkt brown words
+python -m spacy download en_core_web_sm
